# texture-editor

./: .gitignore  CMakeLists.txt  TODO  cmake_build.bat  make.sh  makefile  out
src/: canvas.cpp  canvas.hpp  editor_panel.cpp  editor_panel.hpp  left_panel.cpp  left_panel.hpp  main_app.cpp  main_frame.cpp  main_frame.hpp  right_panel.cpp  right_panel.hpp  texture_graph_node.cpp  texture_graph_node.hpp  texture_graph_panel.cpp  texture_graph_panel.hpp
src/arg/: arg.cpp  arg.hpp  arg_view.cpp  arg_view.hpp  colour_arg.cpp  colour_arg.hpp  colour_arg_view.cpp  colour_arg_view.hpp  int_arg.cpp  int_arg.hpp  int_arg_view.cpp  int_arg_view.hpp
src/node/: constant_color.cpp  constant_color.hpp  node.cpp  node.hpp  pattern.cpp  pattern.hpp
